--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,83 +1,74 @@
 @import "mocha.css";
 
 * {
-    /* `otf-font-awesome` is required to be installed for icons */
-    font-family: JetBrainsMono, FontAwesome, HackNerdFont;
-    font-size: 13px;
+  /* `otf-font-awesome` is required to be installed for icons */
+  font-family: JetBrainsMono, FontAwesome, HackNerdFont;
+  font-size: 13px;
 }
 
 window#waybar {
-    background-color: rgba(0, 0, 0, 0.9);
-    background: transparent;
-    transition-duration: .5s;
-    padding: 5px;
+  background-color: rgba(0, 0, 0, 0.9);
+  transition-duration: 0.5s;
+  padding: 5px;
 }
 
 window#waybar.hidden {
-    opacity: 0.2;
+  opacity: 0.2;
+}
+
+window#waybar.empty {
+  background-color: transparent;
 }
 
 /*
-window#waybar.empty {
-    background-color: transparent;
-}
 window#waybar.solo {
     background-color: #FFFFFF;
 }
 */
 
-window#waybar.termite {
-    background-color: #3F3F3F;
-}
-
-window#waybar.chromium {
-    background-color: #000000;
-    border: none;
-}
-
 /* button { */
-    /* Use box-shadow instead of border so the text isn't offset */
-    /* box-shadow: inset 0 -3px transparent; */
-    /* Avoid rounded borders under each button name */
-    /* border: none; */
-    /* border-radius: 0; */
+/* Use box-shadow instead of border so the text isn't offset */
+/* box-shadow: inset 0 -3px transparent; */
+/* Avoid rounded borders under each button name */
+/* border: none; */
+/* border-radius: 0; */
 /* } */
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 /* button:hover { */
-    /* background: inherit; */
-    /* box-shadow: inset 0 -3px #ffffff; */
+/* background: inherit; */
+/* box-shadow: inset 0 -3px #ffffff; */
 /* } */
 
 #workspaces {
-    padding: 3px;
-    border-radius: 15px;
-    background-color: shade(@base, 0.8);
-    font-weight: bold;
+  padding: 3px;
+  border-radius: 10px;
+  background-color: shade(@base, 0.8);
+  font-weight: bold;
 }
 
 #workspaces button {
-    padding: 0 5px;
-    color: @text;
-    border-radius: 15px;
+  padding: 0 3px;
+  color: @text;
+  border-radius: 10px;
 }
 
 #workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.2);
 }
 
 #workspaces button.active {
-    background: @green;
-    color: @crust;
+  background: @green;
+  color: @crust;
 }
 
 #workspaces button.urgent {
-    background-color: @red;
+  background-color: @red;
 }
 
 #mode {
-    background-color: #64727D;
-    border-bottom: 3px solid #ffffff;
+  background-color: #64727d;
+  border-bottom: 3px solid #ffffff;
 }
 
 #clock,
@@ -95,23 +86,22 @@ window#waybar.chromium {
 #mode,
 #idle_inhibitor,
 #scratchpad,
-#mpd
-{
-    padding: 0 10px;
-    border-radius: 15px;
-    font-weight: bold;
-    background: @surface0;
-    color: @text;
+#mpd {
+  padding: 0 10px;
+  border-radius: 10px;
+  font-weight: bold;
+  background: @surface0;
+  color: @text;
 }
 
 /* If workspaces is the leftmost module, omit left margin */
 .modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
+  margin-left: 0;
 }
 
 /* If workspaces is the rightmost module, omit right margin */
 .modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
+  margin-right: 0;
 }
 
 #clock {
@@ -121,32 +111,32 @@ window#waybar.chromium {
 }
 
 #battery {
-    color: @text;
+  color: @text;
 }
 
-#battery.charging, #battery.plugged {
-    color: @green;
-
+#battery.charging,
+#battery.plugged {
+  color: @green;
 }
 
 @keyframes blink {
-    to {
-        background-color: shade(@red, 0.3);
-        color: @overlay0;
-    }
+  to {
+    background-color: shade(@red, 0.3);
+    color: @overlay0;
+  }
 }
 
 #battery.critical:not(.charging) {
-    color: @red;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+  color: @red;
+  animation-name: blink;
+  animation-duration: 0.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 label:focus {
-    background-color: #000000;
+  background-color: #000000;
 }
 
 #cpu {
@@ -180,7 +170,7 @@ label:focus {
 }
 
 #custom-media {
-    min-width: 100px;
+  min-width: 100px;
 }
 
 #custom-media.custom-spotify {
@@ -199,7 +189,7 @@ label:focus {
 }
 
 #tray > .passive {
-    -gtk-icon-effect: dim;
+  -gtk-icon-effect: dim;
 }
 
 #tray > .needs-attention {
@@ -212,55 +202,55 @@ label:focus {
 }
 
 #mpd {
-    background-color: #66cc99;
-    color: #2a5c45;
+  background-color: #66cc99;
+  color: #2a5c45;
 }
 
 #mpd.disconnected {
-    background-color: #f53c3c;
+  background-color: #f53c3c;
 }
 
 #mpd.stopped {
-    background-color: #90b1b1;
+  background-color: #90b1b1;
 }
 
 #mpd.paused {
-    background-color: #51a37a;
+  background-color: #51a37a;
 }
 
 #language {
-    background: #00b093;
-    color: #740864;
-    padding: 0 5px;
-    margin: 0 5px;
-    min-width: 16px;
+  background: #00b093;
+  color: #740864;
+  padding: 0 5px;
+  margin: 0 5px;
+  min-width: 16px;
 }
 
 #keyboard-state {
-    padding: 0 0px;
-    margin: 0 5px;
-    min-width: 16px;
+  padding: 0 0px;
+  margin: 0 5px;
+  min-width: 16px;
 }
 
 #keyboard-state > label {
-    padding: 0 5px;
+  padding: 0 5px;
 }
 
 #keyboard-state > label.locked {
-    background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.2);
 }
 
 #scratchpad {
-    background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.2);
 }
 
 #scratchpad.empty {
-	background-color: transparent;
+  background-color: transparent;
 }
 
 #window {
-    color: @text;
-    background-color: alpha(@crust, 0.2);
-    border-radius: 15px;
-    padding: 5px 15px;
+  color: @text;
+  background-color: alpha(@crust, 0.2);
+  border-radius: 10px;
+  padding: 5px 15px;
 }
