--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -2,7 +2,7 @@
 
 * {
   /* `otf-font-awesome` is required to be installed for icons */
-  font-family: JetBrainsMono, FontAwesome, HackNerdFont;
+  font-family: JetBrainsMono, "Font Awesome 6 Free", HackNerdFont;
   font-size: 13px;
 }
 
@@ -12,6 +12,7 @@ window#waybar {
   padding: 5px;
 }
 
+/*
 window#waybar.hidden {
   opacity: 0.2;
 }
@@ -20,7 +21,7 @@ window#waybar.empty {
   background-color: transparent;
 }
 
-/*
+
 window#waybar.solo {
     background-color: #FFFFFF;
 }
@@ -42,7 +43,7 @@ window#waybar.solo {
 
 #workspaces {
   padding: 3px;
-  border-radius: 10px;
+  /*border-radius: 10px;*/
   background-color: shade(@base, 0.8);
   font-weight: bold;
 }
@@ -50,7 +51,7 @@ window#waybar.solo {
 #workspaces button {
   padding: 0 3px;
   color: @text;
-  border-radius: 10px;
+  /*border-radius: 10px;*/
 }
 
 #workspaces button:hover {
@@ -88,9 +89,9 @@ window#waybar.solo {
 #scratchpad,
 #mpd {
   padding: 0 10px;
-  border-radius: 10px;
+  /*border-radius: 10px;*/
   font-weight: bold;
-  background: @surface0;
+  /*background: @surface0;*/
   color: @text;
 }
 
@@ -251,6 +252,6 @@ label:focus {
 #window {
   color: @text;
   background-color: alpha(@crust, 0.2);
-  border-radius: 10px;
+  /*border-radius: 10px;*/
   padding: 5px 15px;
 }
